feat: implement BE-01 auth account foundation
