# swagger/v1/swagger.yaml
@@ -12,6 +12,49 @@ components:
 security:
 - Bearer: []
 paths:
+  "/api/v1/auth/signup":
+    post:
+      summary: Регистрация пользователя
+      tags:
+      - Auth
+      parameters: []
+      responses:
+        '201':
+          description: Успешная регистрация
+        '422':
+          description: Невалидные параметры
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user:
+                  type: object
+                  properties:
+                    phone:
+                      type: string
+                      example: "+7 (700) 123-45-67"
+                    email:
+                      type: string
+                      example: USER@example.com
+                    password:
+                      type: string
+                      example: SecurePass123!
+                    password_confirmation:
+                      type: string
+                      example: SecurePass123!
+                    country_code:
+                      type: string
+                      example: KZ
+                  required:
+                  - phone
+                  - email
+                  - password
+                  - password_confirmation
+                  - country_code
+              required:
+              - user
   "/api/v1/auth/login":
     post:
       summary: Аутентификация пользователя
